tests/c_emit/bad/backend_unsupported_compound_literal.mc
// EXPECT: E_BACKEND_UNSUPPORTED

export fn main() -> u32 {
    .{ 1, 2 };
    return 0;
}
